--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -90,12 +90,13 @@
                                     {{ unit }}
                                 </h3>
                             </div>
-                            {{!-- <button type="submit" class="mercadopago-button" formmethod="post">Pagar</button> --}}
 
-                            <script src="https://www.mercadopago.com.uy/integrations/v1/web-payment-checkout.js"
-                                data-preference-id='<%= global.id %>'>
-                                </script>
-
+                            <form action="/procesar-pago" method="POST">
+                                <input type="hidden" name="title" value="{{ title }}">
+                                <input type="hidden" name="price" value="{{ price }}">
+                                <input type="hidden" name="unit" value="{{ unit }}">
+                                <button type="submit" class="mercadopago-button">Pagar</button>
+                            </form>
                         </div>
                     </div>
                 </div>
