--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -95,7 +95,7 @@
                                 <input type="hidden" name="title" value="{{ title }}">
                                 <input type="hidden" name="price" value="{{ price }}">
                                 <input type="hidden" name="unit" value="{{ unit }}">
-                                <button type="submit" class="mercadopago-button">Pagar</button>
+                                <button type="submit" class="mercadopago-button">Pagar la compra</button>
                             </form>
                         </div>
                     </div>
