--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -1,1 +1,4 @@
-<div>Todo bien</div>
+<div>
+    <i class="fas fa-check-circle"></i>
+    <label>Id transacción: <span>{{ collection_id }}</span></label>
+</div>
