--- a/views/failure.handlebars
+++ b/views/failure.handlebars
@@ -1,3 +1,25 @@
+<style>
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 60px;
+    }
+
+    i{
+        font-size: 5em;
+        color: #900000
+    }
+</style>
 <div>
-    Todo mal
+    <i class="fas fa-times-circle"></i><br>
+    <label>PAGO RECHAZADO</label><br>
+    <label>ID de pago: <span>{{ collection_id }}</span></label><br>
+    <label>Método de pago: <span>{{ payment_type }}</span></label><br>
+    <label>Referencia externa: <span>{{ external_reference }}</span></label><br>
+    <label>Estado: <span>{{ status }}</span></label><br>
+    <label>ID de preferencia: <span>{{ preference_id }}</span></label><br>
+    <label>ID de order: <span>{{ merchant_order_id }}</span></label><br>
+    <label>ID de sitio: <span>{{ site_id }}</span></label>
 </div>
