--- a/views/pending.handlebars
+++ b/views/pending.handlebars
@@ -12,6 +12,7 @@
         color: #c9c90b;
     }
 </style>
+<script src="https://www.mercadopago.com/v2/security.js" view=""></script>
 <div>
     <i class="fas fa-minus-circle"></i><br>
     <label>PAGO PENDIENTE</label><br>
