--- a/views/failure.handlebars
+++ b/views/failure.handlebars
@@ -12,6 +12,7 @@
         color: #900000
     }
 </style>
+<script src="https://www.mercadopago.com/v2/security.js" view=""></script>
 <div>
     <i class="fas fa-times-circle"></i><br>
     <label>PAGO RECHAZADO</label><br>
