--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
+                    <script src="https://www.mercadopago.com/v2/security.js" view="home"></script>
                     <div class="as-l-fullwidth  as-navtuck" data-events="event52">
                         <div>
                             <div class="pd-billboard pd-category-header">
