--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -21,5 +21,6 @@
     <label>Estado: <span>{{ status }}</span></label><br>
     <label>ID de preferencia: <span>{{ preference_id }}</span></label><br>
     <label>ID de order: <span>{{ merchant_order_id }}</span></label><br>
-    <label>ID de sitio: <span>{{ site_id }}</span></label>
+    <label>ID de sitio: <span>{{ site_id }}</span></label><br><br>
+    <a href="/home">Volver al sitio</a>
 </div>
