--- a/views/failure.handlebars
+++ b/views/failure.handlebars
@@ -22,5 +22,5 @@
     <label>ID de preferencia: <span>{{ preference_id }}</span></label><br>
     <label>ID de order: <span>{{ merchant_order_id }}</span></label><br>
     <label>ID de sitio: <span>{{ site_id }}</span></label><br><br>
-    <a href="/home">Volver al sitio</a>
+    <a href="/">Volver al sitio</a>
 </div>
