--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -23,4 +23,5 @@
     <label>ID de order: <span>{{ merchant_order_id }}</span></label><br>
     <label>ID de sitio: <span>{{ site_id }}</span></label><br><br>
     <a href="/">Volver al sitio</a>
+    <label for="">{{ hola }}</label>
 </div>
