--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -15,7 +15,7 @@
 <div>
     <i class="fas fa-check-circle"></i><br>
     <label>PAGO APROBADO</label><br>
-    <label>ID de pago: <span>{{ collection_id }}</span></label><br>
+    <label>ID de pago: <span>{{ req }}</span></label><br>
     <label>Método de pago: <span>{{ payment_type }}</span></label><br>
     <label>Referencia externa: <span>{{ external_reference }}</span></label><br>
     <label>Estado: <span>{{ status }}</span></label><br>
