--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -23,5 +23,5 @@
     <label>ID de order: <span>{{ req.merchant_order_id }}</span></label><br>
     <label>ID de sitio: <span>{{ req.site_id }}</span></label><br><br>
     <a href="/">Volver al sitio</a>
-    <label for="">{{ notification.action }}</label>
+    <label for="">{{ notification }}</label>
 </div>
