--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -25,3 +25,12 @@
     <a href="/">Volver al sitio</a>
     <label for="">{{ notification.action }}</label>
 </div>
+
+<a href="#miModal">Abrir Modal</a>
+<div id="miModal" class="modal">
+  <div class="modal-contenido">
+    <a href="#">X</a>
+    <h2>Mi primer Modal</h2>
+    <p>Este es mi primera ventana modal sin utilizar JavaScript.</p>
+  </div>  
+</div>
