--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,8 @@
 
     <link rel="stylesheet" href="/assets/fonts" media="">
 
+    <link rel="stylesheet" href="/assets/modal.css" media="">
+
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>    <style>
         .as-filter-button-text {
             font-size: 26px;
