--- a/assets/modal.css
+++ b/assets/modal.css
@@ -11,5 +11,12 @@
     top:0;
     right:0;
     bottom:0;
-    left:0;  
+    left:0;
+    opacity:0;
+    pointer-events:none;
+    transition: all 1s;
+  }
+  #miModal:target{
+    opacity:1;
+    pointer-events:auto;
   }
