--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -26,11 +26,13 @@
     <label for="">{{ notification.action }}</label>
 </div>
 
-<a href="#miModal">Abrir Modal</a>
-<div id="miModal" class="modal">
-  <div class="modal-contenido">
-    <a href="#">X</a>
-    <h2>Mi primer Modal</h2>
-    <p>Este es mi primera ventana modal sin utilizar JavaScript.</p>
-  </div>  
+<a href="#openModal">Lanzar el modal</a>
+
+<div id="openModal" class="modalDialog">
+	<div>
+		<a href="#close" title="Close" class="close">X</a>
+		<h2>Mi modal</h2>
+		<p>Este es un ejemplo de modal, creado gracias al poder de CSS3.</p>
+		<p>Puedes hacer un montón de cosas aquí, como alertas o incluso crear un formulario de registro aquí mismo.</p>
+	</div>
 </div>
