--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,8 @@
 
     <link rel="stylesheet" href="/assets/modal.css" media="">
 
+    <script src="https://www.mercadopago.com/v2/security.js" view="{{ name }}"></script>
+
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>    <style>
         .as-filter-button-text {
             font-size: 26px;
