--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
       media="screen, print"
     />
 
-    <link rel="stylesheet" href="/assets/fonts" media="" />
+    {{!-- <link rel="stylesheet" href="/assets/fonts" media="" /> --}}
 
     <link rel="stylesheet" href="/assets/modal.css" media="" />
 
